[WIP] GL/GLES support

--- a/xbmc/cores/RetroPlayer/buffers/CMakeLists.txt
+++ b/xbmc/cores/RetroPlayer/buffers/CMakeLists.txt
@@ -1,6 +1,8 @@
 set(SOURCES BaseRenderBuffer.cpp
             BaseRenderBufferPool.cpp
             RenderBufferManager.cpp
+            RenderBufferFBO.cpp
+            RenderBufferPoolFBO.cpp
 )
 
 set(HEADERS BaseRenderBuffer.h
@@ -8,6 +10,8 @@ set(HEADERS BaseRenderBuffer.h
             IRenderBuffer.h
             IRenderBufferPool.h
             RenderBufferManager.h
+            RenderBufferFBO.h
+            RenderBufferPoolFBO.h
 )
 
 if(OPENGL_FOUND OR OPENGLES_FOUND)
