Update .gitignore for RPi depends

--- a/tools/depends/.gitignore
+++ b/tools/depends/.gitignore
@@ -33,6 +33,7 @@
 /target/*/appletvos*.*_arm64*-target-*/*
 /target/*/appletvsimulator*.*_x86_64*-target-*/
 /target/*/appletvsimulator*.*_x86_64*-target-*/*
+/target/*/raspberry-pi*/*
 
 /pre-depends/
 /pre-build-deps/
